Per subnet hardware rental (#68)
This PR restructures validator hardware rental to be per subnet rather than per hardware provider. This greatly simplifies adding new hardware providers to the system.

--- a/foundry.toml
+++ b/foundry.toml
@@ -11,7 +11,8 @@ fs_permissions = [{ access = "read-write", path = "./deployed/"}]
 remappings = [
 	'@openzeppelin/=node_modules/@openzeppelin/'
 ]
-
+src = "contracts"
+exclude = ["contracts/contract/previousVersions/**/*.sol"]
 # [profile.lite.optimizer_details.yulDetails]
 # optimizerSteps = ''
 
